# Edge-Device-Fleet-Manager

./: .coverage  .env.example  .flake8  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  FEATURE1_IMPLEMENTATION_SUMMARY.md  FEATURE7_TESTING.md  FEATURE8_IMPLEMENTATION_SUMMARY.md  FEATURE_3_SUMMARY.md  FEATURE_4_SUMMARY.md  FEATURE_6_SUMMARY.md  Makefile  README.md  benchmark.db  benchmark_persistence_performance.py  coverage.xml  docker-compose.yml  example_visualization_dashboard.py  mkdocs.yml  pyproject.toml  pytest.ini  run_feature7_test.bat  run_feature7_test.sh  run_feature7_unit_tests.py  run_persistence_tests.py  run_pytest_fixed.py  run_visualization_unit_tests_fixed.py  test_discovery_comprehensive.py  test_discovery_feature4_comprehensive.py  test_feature7_basic.py  test_feature7_comprehensive.py  test_feature7_minimal.py  test_feature7_simple.py  test_feature7_units.py  test_feature8_basic.py  test_feature8_comprehensive.py  test_feature8_simple.py  test_minimal.py  test_persistence_comprehensive_fixed.py  (+9 more)
.github/workflows/: ci.yml
configs/: default.yaml  development.yaml  mosquitto.conf  production.yaml  prometheus.yml
edge_device_fleet_manager/: __init__.py  _version.py
edge_device_fleet_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
edge_device_fleet_manager/cicd/: __init__.py
edge_device_fleet_manager/cicd/pipeline/: __init__.py  pipeline_config.py  pipeline_manager.py  stage_executor.py
edge_device_fleet_manager/cli/: __init__.py  main.py  types.py
edge_device_fleet_manager/core/: config.py  context.py  exceptions.py  logging.py  plugins.py
edge_device_fleet_manager/discovery/: __init__.py  cache.py  config.py  core.py  events.py  exceptions.py  rate_limiter.py  scheduling.py
edge_device_fleet_manager/discovery/plugins/: __init__.py  base.py  decorators.py  manager.py
edge_device_fleet_manager/discovery/protocols/: __init__.py  mdns.py  network_scan.py  snmp.py  ssdp.py
edge_device_fleet_manager/observability/: __init__.py
edge_device_fleet_manager/observability/metrics/: __init__.py  aggregator.py  collector.py  exporter.py
edge_device_fleet_manager/observability/monitoring/: __init__.py  health_monitor.py
edge_device_fleet_manager/packaging/: __init__.py
edge_device_fleet_manager/packaging/builders/: __init__.py  docker_builder.py  wheel_builder.py
edge_device_fleet_manager/packaging/managers/: __init__.py  package_manager.py  version_controller.py
edge_device_fleet_manager/persistence/: __init__.py
edge_device_fleet_manager/persistence/connection/: __init__.py  config.py  health.py  manager.py  pool.py
edge_device_fleet_manager/persistence/migrations/: __init__.py  manager.py  migrator.py  utils.py  validators.py
edge_device_fleet_manager/persistence/models/: __init__.py  alert.py  analytics.py  audit_log.py  base.py  device.py  device_group.py  telemetry.py  user.py
edge_device_fleet_manager/persistence/repositories/: __init__.py  alert.py  analytics.py  audit_log.py  base.py  device.py  device_group.py  telemetry.py  user.py
edge_device_fleet_manager/plugins/: __init__.py  sample_plugin.py
edge_device_fleet_manager/reports/: __init__.py
edge_device_fleet_manager/reports/alerts/: __init__.py  alert_rules.py  severity.py
edge_device_fleet_manager/reports/core/: __init__.py  alert_manager.py  audit_retention.py  notification_service.py  report_engine.py
edge_device_fleet_manager/reports/generators/: __init__.py  csv_generator.py  html_generator.py  json_generator.py  pdf_generator.py
edge_device_fleet_manager/reports/notifications/: __init__.py  email_notifier.py  slack_notifier.py  sms_notifier.py  webhook_notifier.py
edge_device_fleet_manager/repository/: __init__.py
edge_device_fleet_manager/repository/application/: __init__.py  commands.py  dto.py  handlers.py  queries.py  services.py
edge_device_fleet_manager/repository/domain/: __init__.py  entities.py  events.py  services.py  value_objects.py
edge_device_fleet_manager/repository/infrastructure/: __init__.py  database.py  event_store.py  repositories.py  unit_of_work.py
edge_device_fleet_manager/utils/: __init__.py  decorators.py
edge_device_fleet_manager/visualization/: __init__.py
edge_device_fleet_manager/visualization/core/: dashboard.py  data_adapter.py  engine.py  plugin_manager.py  theme.py
edge_device_fleet_manager/visualization/plugins/: __init__.py  bar_chart.py  base.py  gauge.py  line_chart.py  registry.py  time_series.py
scripts/: demo_feature1.py  run_tests.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_alert_manager.py  test_cli.py  test_config.py  test_context.py  test_discovery_cache.py  test_discovery_config.py  test_discovery_core.py  test_discovery_events.py  test_discovery_plugins.py  test_discovery_protocols.py  test_discovery_rate_limiter.py  test_discovery_scheduling.py  test_discovery_snmp.py  test_health_monitor.py  test_metrics_collector.py  test_persistence_minimal.py  test_persistence_models.py  test_persistence_repositories.py  test_plugins.py  test_report_engine.py  test_repository_application.py  test_repository_domain.py  test_repository_infrastructure.py  test_visualization_dashboard.py  test_visualization_engine.py  test_visualization_plugins.py
